docs: refresh for OR-Tools engine + Compose Desktop GUI; drop legacy JavaFX docs
- README: Compose Desktop + OR-Tools (badges, About, roadmap), Java 25 prereq,
  :gui-compose:run, remove the obsolete legacy-UI demo video
- AGENTS.md: rewrite module map (gui -> gui-compose), engine section (OR-Tools CP-SAT
  default + GA alternative, native JVM args), Compose GUI architecture, data pipeline,
  build/run/test, packaging (Conveyor on gui-compose), conventions, branches
- CLAUDE.md: drop the GA-vs-OR-Tools branch caveat and the generated-i18n note; describe
  the Compose GUI + native warm-up
- Remove completed migration docs (COMPOSE_MIGRATION_PLAN.md, UI_REDESIGN_HANDOFF.md);
  keep docs/design-reference (visual source of truth) and docs/ENCHANTMENTS_PLAN.md

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>